--- a/android/java/res/xml/qa_preferences.xml
+++ b/android/java/res/xml/qa_preferences.xml
@@ -26,5 +26,14 @@
         android:summaryOn="@string/text_on"
         android:summaryOff="@string/text_off"
         android:defaultValue="false" />
-    
+
+    <PreferenceCategory android:title="Database">
+        <org.chromium.chrome.browser.settings.ChromeBasePreference
+            android:key="qa_import_rewards_db"
+            android:title="Import Rewards Database"/>
+
+        <org.chromium.chrome.browser.settings.ChromeBasePreference
+            android:key="qa_export_rewards_db"
+            android:title="Export Rewards Database"/>
+    </PreferenceCategory>
 </PreferenceScreen>
