--- a/android/java/res/xml/developer_preferences.xml
+++ b/android/java/res/xml/developer_preferences.xml
@@ -24,4 +24,8 @@
         android:fragment="org.chromium.chrome.browser.settings.developer.BraveQAPreferences"
         android:key="qa_preferences"
         android:title="QA Preferences"/>
+    <Preference
+        android:fragment="org.chromium.chrome.browser.settings.developer.BraveRewardsDebugPreferences"
+        android:key="brave_rewards_debug_preferences"
+        android:title="Rewards Debug"/>
 </PreferenceScreen>
